sema/testdata/gcc-c90-as-c99/reject/c90-return-1.c
int
foo (void)
{
  return;
}

void
bar (void)
{
  return 1;

}
